Minor bug fixes.

--- a/sample.html
+++ b/sample.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="videostyle.css">
     <script src="adapter-latest.js"></script>
     <script src="videofield.js"></script>
 </head>
