Adding recording label.

--- a/sample.html
+++ b/sample.html
@@ -6,7 +6,7 @@
     <script src="videofield.js"></script>
 </head>
 <body>
-    <video-input id="vid1" width="640" height="480" label="Please record your answer below." labelloc="top" action="/r/upload" maxtime="3">
+    <video-input id="vid1" vidwidth="640" vidheight="480" label="Please record your answer below." labelloc="top" action="/r/upload" maxtime="3">
     </video-input>
 </body>
 </html>
